fix(styles): Increase content page width
Tables with long parameter names overflowing content container - increase maximum page width to allow for wider tables

--- a/app/_assets/stylesheets/base.less
+++ b/app/_assets/stylesheets/base.less
@@ -13,7 +13,7 @@ body {
   -webkit-font-smoothing: antialiased;
 
   .container {
-    max-width: 1020px;
+    max-width: 1100px;
   }
 
   @media (min-width: @navbar-collapse-point) {
